--- a/sass/partials/_schedule.scss
+++ b/sass/partials/_schedule.scss
@@ -10,18 +10,20 @@
 		text-transform: none;
 		text-align: center;
 		padding:10px;
-		background: #f1f1f1;
-		width: 33%;
 	}
 	td {
 		text-align: center;
+		padding:10px;
+		text-transform: uppercase;
 	}
 	.lecture {
 		background: lighten($tiy-design-callout, 10);
-		width: 33%;
 	}
 	.lab {
 		background: lighten($tiy-callout, 20);
-		width: 33%;
+	}
+	.daypart {
+		font-weight: normal;
+		width:10%;
 	}
 }
